--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,8 +6,42 @@
     margin: 0px;
 }
 
-main {
-    padding: 0 240px;
+/* --------------
+    Header Style
+    ------------ */
+header {
+    background: rgba(255, 144, 14, 0.1);
+    padding: 50px 240px 102px 240px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-menu li {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 26px;
+    text-align: center;
+    color: #424242;
+
+}
+
+.brand-identity {
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 53px;
+    text-align: center;
+    color: #131313;
+}
+
+.nav-menu ul {
+    display: flex;
+    gap: 50px;
+    list-style: none;
+}
+
+.main {
+    /* padding: 0 240px; */
 }
 
 /* ---------------------
@@ -15,7 +49,6 @@ main {
 ------------------------- */
 .container {
     background-color: rgba(255, 144, 14, 0.1);
-    padding-top: 50px;
     padding-bottom: 50px;
 }
 
@@ -305,4 +338,74 @@ All feature styles
 
 .copyright-text {
     text-align: center;
+}
+
+
+
+/* Responsive For Mobile devices */
+@media screen and (max-width:576px) {
+    header {
+        max-width: 100%;
+        padding: 50px 0 102px 0;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .main {
+        padding: 0;
+    }
+
+    .nav-menu ul {
+        padding-top: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .cta-banner img {
+        width: 100%;
+        padding-top: 50px;
+
+    }
+
+    .feature-cta-image {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 20px;
+    }
+
+    .feature-cta {
+        flex-direction: column;
+    }
+
+    .feature-cta-info {
+        padding-left: 10px;
+    }
+
+    .all-feature {
+        flex-direction: column-reverse;
+    }
+
+    .features-name {
+        padding: 10px;
+    }
+
+    .other-facts-info {
+        padding: 10px;
+    }
+
+    .other-facts-achievement {
+        grid-template-columns: repeat(1, 1fr);
+        justify-items: center;
+    }
+
+    .sponsor-img {
+        grid-template-columns: repeat(1, 1fr);
+        justify-items: center;
+    }
+
+    .copyright {
+        padding: 38px 38px;
+        margin: 0;
+    }
 }
